--- a/src/QualityHats/Views/Hats/Create.cshtml
+++ b/src/QualityHats/Views/Hats/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Create</h2>
 
-<form asp-action="Create">
+<form asp-action="Create" enctype="multipart/form-data">
     <div class="form-horizontal">
         <h4>Hat</h4>
         <hr />
@@ -31,12 +31,6 @@
                 <span asp-validation-for="HatName" class="text-danger" />
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="ImageName" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="ImageName" class="form-control" />
-                <span asp-validation-for="ImageName" class="text-danger" />
-            </div>
         </div>
         <div class="form-group">
             <label asp-for="SupplierID" class="col-md-2 control-label"></label>
@@ -51,6 +45,7 @@
                 <span asp-validation-for="UnitPrice" class="text-danger" />
             </div>
         </div>
+        <input type="file" name="_files" id="_files" />
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
