--- a/src/QualityHats/Views/Manage/Index.cshtml
+++ b/src/QualityHats/Views/Manage/Index.cshtml
@@ -67,5 +67,19 @@
                     </form>
                 }*@
         </dd>
+
+        <dt>Address:</dt>
+        <dd>
+            @if (Model.Address != null)
+            {
+
+                <p>@Model.Address</p>
+            }
+            else
+            {
+                <p>No Address Provided!</p>
+            }
+        </dd>
+
     </dl>
 </div>
