--- a/src/QualityHats/Views/Account/Register.cshtml
+++ b/src/QualityHats/Views/Account/Register.cshtml
@@ -10,6 +10,20 @@
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
+        <label asp-for="FirstName" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="FirstName" class="form-control" />
+            <span asp-validation-for="FirstName" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="LastName" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="LastName" class="form-control" />
+            <span asp-validation-for="LastName" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
         <label asp-for="Email" class="col-md-2 control-label"></label>
         <div class="col-md-10">
             <input asp-for="Email" class="form-control" />
@@ -35,6 +49,27 @@
         <div class="col-md-10">
             <input asp-for="Address" class="form-control" />
             <span asp-validation-for="Address" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="MobileNumber" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="MobileNumber" class="form-control" />
+            <span asp-validation-for="MobileNumber" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="HomeNumber" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="HomeNumber" class="form-control" />
+            <span asp-validation-for="HomeNumber" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="WorkNumber" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="WorkNumber" class="form-control" />
+            <span asp-validation-for="WorkNumber" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
