--- a/src/QualityHats/Views/Hats/Create.cshtml
+++ b/src/QualityHats/Views/Hats/Create.cshtml
@@ -31,11 +31,10 @@
                 <span asp-validation-for="HatName" class="text-danger" />
             </div>
         </div>
-        </div>
         <div class="form-group">
             <label asp-for="SupplierID" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <select asp-for="SupplierID" class ="form-control" asp-items="ViewBag.SupplierID"></select>
+                <select asp-for="SupplierID" class="form-control" asp-items="ViewBag.SupplierID"></select>
             </div>
         </div>
         <div class="form-group">
@@ -45,7 +44,11 @@
                 <span asp-validation-for="UnitPrice" class="text-danger" />
             </div>
         </div>
-        <input type="file" name="_files" id="_files" />
+        <div class="form-group">
+            <div class="col-md-offset-1">
+                <input type="file" name="_files" id="_files" />
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
