--- a/src/QualityHats/Views/Hats/Index.cshtml
+++ b/src/QualityHats/Views/Hats/Index.cshtml
@@ -50,6 +50,12 @@
                 <a asp-action="Details" asp-route-id="@item.HatID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.HatID">Delete</a>
             </td>
+            <td>
+                <a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@item.HatID">
+                    <span class="glyphicon glyphicon-shopping-cart"></span>
+                    Add To Cart
+                </a>
+            </td>
         </tr>
 }
     </tbody>
