--- a/src/QualityHats/Views/Orders/Delete.cshtml
+++ b/src/QualityHats/Views/Orders/Delete.cshtml
@@ -12,12 +12,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.CustomerID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CustomerID)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.GST)
         </dt>
         <dd>
@@ -41,6 +35,36 @@
         <dd>
             @Html.DisplayFor(model => model.Subtotal)
         </dd>
+        <dd>
+            <table class="table">
+                <tr>
+                    <th>Hat</th>
+                    <th>Description</th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+                </tr>
+                @foreach (var item in Model.OrderDetails)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => item.Hat.HatName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Hat.Description)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Hat.UnitPrice)</td>
+                    </tr>
+                }
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <label>Grand Total:</label>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => Model.GrandTotal)
+                    </td>
+                </tr>
+            </table>
+        </dd>
+
     </dl>
     
     <form asp-action="Delete">
