Updated Hats controller and view

--- a/src/QualityHats/Views/Hats/Create.cshtml
+++ b/src/QualityHats/Views/Hats/Create.cshtml
@@ -1,16 +1,37 @@
 @model QualityHats.Models.Hat
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create A New Hat";
 }
 
-<h2>Create</h2>
+<h2>Create A New Hat</h2>
 
 <form asp-action="Create" enctype="multipart/form-data">
     <div class="form-horizontal">
-        <h4>Hat</h4>
+        <h4>Please enter details</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="HatName" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="HatName" class="form-control" />
+                <span asp-validation-for="HatName" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="Description" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="UnitPrice" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="UnitPrice" class="form-control" />
+                <span asp-validation-for="UnitPrice" class="text-danger"></span>
+            </div>
+        </div>
         <div class="form-group">
             <label asp-for="CategoryID" class="col-md-2 control-label"></label>
             <div class="col-md-10">
@@ -18,30 +39,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Description" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="HatName" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="HatName" class="form-control" />
-                <span asp-validation-for="HatName" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
             <label asp-for="SupplierID" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <select asp-for="SupplierID" class="form-control" asp-items="ViewBag.SupplierID"></select>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="UnitPrice" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="UnitPrice" class="form-control" />
-                <span asp-validation-for="UnitPrice" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
