--- a/src/QualityHats/Views/Categories/Create.cshtml
+++ b/src/QualityHats/Views/Categories/Create.cshtml
@@ -15,7 +15,7 @@
             <label asp-for="CategoryName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="CategoryName" class="form-control" />
-                <span asp-validation-for="CategoryName" class="text-danger" />
+                <span asp-validation-for="CategoryName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
