--- a/src/QualityHats/Views/Hats/Delete.cshtml
+++ b/src/QualityHats/Views/Hats/Delete.cshtml
@@ -1,21 +1,22 @@
 @model QualityHats.Models.Hat
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete The Hat";
 }
 
 <h2>Delete</h2>
-
+<p class="text-danger">@ViewData["ErrorMessage"]</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
+    <h3> @TempData["HatUsed"] </h3>
     <h4>Hat</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            <img style="width: 250px; height: auto;" src="@Href("~" + Model.ImagePath)" alt="Hat Image" onerror="this.onerror = null; this.src = '@Href("~/images/Error.jpg")'">
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.HatName)
@@ -24,16 +25,28 @@
             @Html.DisplayFor(model => model.HatName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ImageName)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ImageName)
+            @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.UnitPrice)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UnitPrice)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
+        <dd>
+            @Html.DisplayFor(modelItem => Model.Category.CategoryName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Supplier)
+        </dt>
+        <dd>
+            @Html.DisplayFor(modelItem => Model.Supplier.SupplierName)
         </dd>
     </dl>
     
