--- a/src/QualityHats/Views/Hats/Index.cshtml
+++ b/src/QualityHats/Views/Hats/Index.cshtml
@@ -1,14 +1,24 @@
-@model IEnumerable<QualityHats.Models.Hat>
+@model PaginatedList<QualityHats.Models.Hat>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Hats";
 }
 
-<h2>Index</h2>
+<h2>Our Hats</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Search: <input type="text" name="SearchString" value="@ViewData["currentFilter"]" /> <input type="submit" value="Search" class="btn btn-default" /> |
+            <a asp-action="Index">Back To Full List</a>
+        </p>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -16,13 +26,13 @@
                 Image
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Name</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.HatName)
+                Description
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UnitPrice)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["PriceSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Price</a>
             </th>
             <th></th>
         </tr>
@@ -37,10 +47,10 @@
                 <img style="width: 250px; height: auto;" src="@imgUrl" alt="Hat Image" onerror="this.onerror = null; this.src = '@errImg'">
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.HatName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.HatName)
+                @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UnitPrice)
@@ -50,13 +60,26 @@
                 <a asp-action="Details" asp-route-id="@item.HatID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.HatID">Delete</a>
             </td>
-            <td>
-                <a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@item.HatID">
-                    <span class="glyphicon glyphicon-shopping-cart"></span>
-                    Add To Cart
-                </a>
-            </td>
         </tr>
 }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+<a asp-action="Index"
+    asp-route-sortOrder="@ViewData["CurrentSort"]"
+    asp-route-page="@(Model.PageIndex - 1)"
+    asp-route-currentFilter="@ViewData["CurrentFilter"]"
+    class="btn btn-default @prevDisabled btn">
+    Previous
+</a>
+<a asp-action="Index"
+    asp-route-sortOrder="@ViewData["CurrentSort"]"
+    asp-route-page="@(Model.PageIndex + 1)"
+    asp-route-currentFilter="@ViewData["CurrentFilter"]"
+    class="btn btn-default @nextDisabled btn">
+    Next
+</a>
