--- a/src/QualityHats/Views/Orders/Create.cshtml
+++ b/src/QualityHats/Views/Orders/Create.cshtml
@@ -6,49 +6,35 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<h3>Please Fill in the Order Details</h3>
+<h3>Please confirm order details</h3>
+    <form asp-action="Create">
+        <div class="form-horizontal">
+            <hr />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<form asp-action="Create">
-    <div class="form-horizontal">
-        <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @*<div class="form-group">
-            <label asp-for="GST" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="GST" class="form-control" />
-                <span asp-validation-for="GST" class="text-danger" />
-            </div>
-        </div>*@
-        @*<div class="form-group">
-            <label asp-for="GrandTotal" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="GrandTotal" class="form-control" />
-                <span asp-validation-for="GrandTotal" class="text-danger" />
-            </div>
-        </div>*@
-        <div class="form-group">
-            <label asp-for="Status" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger" />
+            @*<div class="form-group">
+                    <label asp-for="Status" class="col-md-2 control-label"></label>
+                    <div class="col-md-10">
+                        <input asp-for="Status" class="form-control" />
+                        <span asp-validation-for="Status" class="text-danger" />
+                    </div>
+                </div>*@
+            @*<div class="form-group">
+                    <label asp-for="Subtotal" class="col-md-2 control-label"></label>
+                    <div class="col-md-10">
+                        <input asp-for="Subtotal" class="form-control" />
+                        <span asp-validation-for="Subtotal" class="text-danger" />
+                    </div>
+                </div>*@
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <button type="submit" class="btn btn-default btn-lg">
+                        Place Order <span class="glyphicon glyphicon-fast-forward"></span>
+                    </button>
+                </div>
             </div>
         </div>
-        @*<div class="form-group">
-            <label asp-for="Subtotal" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Subtotal" class="form-control" />
-                <span asp-validation-for="Subtotal" class="text-danger" />
-            </div>
-        </div>*@
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-default btn-lg">
-                    Place Order <span class="glyphicon glyphicon-fast-forward"></span>
-                </button>
-            </div>
-        </div>
-    </div>
-</form>
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    </form>
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
