--- a/src/QualityHats/Views/Suppliers/Edit.cshtml
+++ b/src/QualityHats/Views/Suppliers/Edit.cshtml
@@ -16,35 +16,35 @@
             <label asp-for="Email" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="HomeNumber" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="HomeNumber" class="form-control" />
-                <span asp-validation-for="HomeNumber" class="text-danger" />
+                <span asp-validation-for="HomeNumber" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="MobileNumber" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="MobileNumber" class="form-control" />
-                <span asp-validation-for="MobileNumber" class="text-danger" />
+                <span asp-validation-for="MobileNumber" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="PhoneNumber" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="SupplierName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="SupplierName" class="form-control" />
-                <span asp-validation-for="SupplierName" class="text-danger" />
+                <span asp-validation-for="SupplierName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
