--- a/src/QualityHats/Views/CustomerOrders/Details.cshtml
+++ b/src/QualityHats/Views/CustomerOrders/Details.cshtml
@@ -1,12 +1,11 @@
 @model QualityHats.Models.Order
 
 @{
-    ViewData["Title"] = "Delete The Order";
+    ViewData["Title"] = "Order Details";
 }
 
-<h2>Delete the order</h2>
+<h2>Order details</h2>
 
-<h3>Are you sure you want to delete this order?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
@@ -84,11 +83,7 @@
             </table>
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a asp-action="Index">Back to List</a>
-        </div>
-    </form>
+</div>
+<div>
+    <a asp-action="Index">Back to List</a>
 </div>
