--- a/src/QualityHats/Views/Orders/Index.cshtml
+++ b/src/QualityHats/Views/Orders/Index.cshtml
@@ -1,14 +1,23 @@
 @model IEnumerable<QualityHats.Models.Order>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Orders";
 }
 
-<h2>Index</h2>
+<h2>Orders</h2>
 
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.OrderID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.User.FullName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Subtotal)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.GST)
             </th>
@@ -19,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Subtotal)
+                @Html.DisplayNameFor(model => model.OrderDate)
             </th>
             <th></th>
         </tr>
@@ -27,6 +36,15 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.OrderID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User.FullName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Subtotal)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.GST)
             </td>
@@ -37,9 +55,10 @@
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Subtotal)
+                @Html.DisplayFor(modelItem => item.OrderDate)
             </td>
             <td>
+                <a asp-action="Edit" asp-route-id="@item.OrderID">Edit</a> |
                 <a asp-action="Delete" asp-route-id="@item.OrderID">Delete</a>
             </td>
         </tr>
