--- a/src/QualityHats/Views/AdminApplicationUsers/Index.cshtml
+++ b/src/QualityHats/Views/AdminApplicationUsers/Index.cshtml
@@ -10,6 +10,12 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.UserName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FullName)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
@@ -23,6 +29,12 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FullName)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
